--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,13 @@ dist: trusty
 sudo: required
 
 before_install:
-    - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
-    - sudo apt-get update -qq
-    - sudo apt-get install -qq qt5-qmake qtbase5-dev qtdeclarative5-dev libqt5webkit5-dev libsqlite3-dev
+    - sudo add-apt-repository ppa:beineri/opt-qt562-trusty
+    - sudo apt-get update
+    - sudo apt-get install -qq qt5-qmake qtbase56-meta-full
 
 script:
-    - qmake -qt=qt5 -v
-    - qmake -qt=qt5
+    - source /opt/qt56/bin/qt56-env.sh
+    - /opt/qt56/bin/qmake
     - make
 
 after_success:
