--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ dist: trusty
 sudo: required
 
 before_install:
-    - sudo add-apt-repository ppa:beineri/opt-qt562-trusty
+    - sudo add-apt-repository ppa:beineri/opt-qt562-trusty --yes
     - sudo apt-get update
     - sudo apt-get install -qq qt5-qmake qtbase56-meta-full
 
