--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ sudo: required
 before_install:
     - sudo add-apt-repository ppa:beineri/opt-qt562-trusty --yes
     - sudo apt-get update
-    - sudo apt-get install -qq qt5-qmake qt56base qt56base-dev
+    - sudo apt-get install -qq qt5-qmake qt56base
 
 script:
     - source /opt/qt56/bin/qt56-env.sh
