Add test data and update ci scripts.

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,4 @@ after_success:
     - ./ffparser --cfg test_data/case2/case2.cfg --source test_data/case2/case2.source
     - ./ffparser --cfg test_data/case3/case3.cfg --source test_data/case3/case3.source
     - ./ffparser --cfg test_data/case4/case4.cfg --source test_data/case4/case4.source
-    - ./ffparser --cfg test_data/case/case5.cfg --source test_data/case5/case5.source
+    - ./ffparser --cfg test_data/case5/case5.cfg --source test_data/case5/case5.source
