--- a/test_data/case5/case5.cfg
+++ b/test_data/case5/case5.cfg
@@ -1,7 +1,9 @@
-S > A
-A > A B A C
-| a
-B > b
-| lamda
-C > c
-| lamda
+1 S > A
+2 A > B C B D
+3 | a
+4 B > b
+5 | lamda
+6 C > c
+7 | lamda
+8 D > d
+9 | lamda
