--- a/test_data/case3/case3.cfg
+++ b/test_data/case3/case3.cfg
@@ -1,9 +1,15 @@
-1 S > A C $
-2 C > c
+1 Prog > Dcls Stmts $
+2 Dcls > Dcl Dcls
 3 | lamda
-4 A > a B C d
-5 | B Q
-6 B > b B
+4 Dcl > floatdcl id
+5 | intdcl id
+6 Stmts > Stmt Stmts
 7 | lamda
-8 Q > q
-9 | lamda
+8 Stmt > id assign Val Expr
+9 | print id
+10 Expr > plus Val Expr
+11 | minus Val Expr
+12 | lamda
+13 Val > id
+14 | inum
+15 | fnum
